--- a/res/layout/fragment_take_order.xml
+++ b/res/layout/fragment_take_order.xml
@@ -5,7 +5,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="3dp"
     tools:context="com.intuit.quickfoods.MainActivity$PlaceholderFragment" >
 
     <TextView
@@ -43,19 +43,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="start"
-                android:text="Go" />
+                android:text="Go"
+                android:background="@drawable/round_button" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:paddingTop="3dp"
+            >
 
             <AutoCompleteTextView
                 android:id="@+id/take_order_add_item"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="5.92"
+                android:layout_height="match_parent"
+                android:layout_weight="2.53"
                 android:ems="10"
                 android:hint="Item" />
 
@@ -71,13 +74,14 @@
                 <requestFocus />
             </EditText>
 
-        </LinearLayout>
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="+"
+                android:background="@drawable/round_button" />
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Add" />
+        </LinearLayout>
 
     </LinearLayout>
 
