--- a/res/drawable/round_button.xml
+++ b/res/drawable/round_button.xml
@@ -5,16 +5,15 @@
         <shape>
             <solid android:color="@color/button" />
             <corners android:radius="15dp" />
-            <stroke android:width="1dp" android:color="#222222" />
-            <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
+            <stroke android:width="1dp" android:color="#1284ff" />
+
         </shape>
     </item>
     <item>
         <shape>
-            <gradient android:angle="270" android:endColor="#004F81" android:startColor="#89cbee" />
+            <gradient android:angle="270" android:endColor="#1284ff" android:startColor="#1274ff"/>
             <stroke android:width="1dp" android:color="#4aa5d4" />
-            <corners android:radius="7dp" />
-            <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
+            <corners android:radius="15dp" />
         </shape>
     </item>
 </selector>
