--- a/res/layout/fragment_take_order.xml
+++ b/res/layout/fragment_take_order.xml
@@ -83,6 +83,17 @@
 
         </LinearLayout>
 
+        <EditText
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText"
+            android:text="Items"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="15dp"
+            android:background="#eee"
+            android:padding="5dp" />
+
     </LinearLayout>
 
 </RelativeLayout>
