--- a/res/layout/fragment_take_order.xml
+++ b/res/layout/fragment_take_order.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingBottom="0dp"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
     android:paddingTop="3dp"
@@ -94,6 +94,100 @@
             android:background="#eee"
             android:padding="5dp" />
 
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:stretchColumns="1"
+            android:id="@+id/take_order_items_view_layout">
+
+            <TableRow>
+                <TextView
+                    android:layout_column="1"
+                    android:text="Open..."
+                    android:padding="3dip" />
+                <TextView
+                    android:text="Ctrl-O"
+                    android:gravity="right"
+                    android:padding="3dip" />
+            </TableRow>
+
+            <TableRow>
+                <TextView
+                    android:layout_column="1"
+                    android:text="Save..."
+                    android:padding="3dip" />
+                <TextView
+                    android:text="Ctrl-S"
+                    android:gravity="right"
+                    android:padding="3dip" />
+            </TableRow>
+
+            <TableRow>
+                <TextView
+                    android:layout_column="1"
+                    android:text="Save As..."
+                    android:padding="3dip" />
+                <TextView
+                    android:text="Ctrl-Shift-S"
+                    android:gravity="right"
+                    android:padding="3dip" />
+            </TableRow>
+
+            <View
+                android:layout_height="2dip"
+                android:background="#FF909090" />
+
+            <TableRow>
+                <TextView
+                    android:text="X"
+                    android:padding="3dip" />
+                <TextView
+                    android:text="Import..."
+                    android:padding="3dip" />
+            </TableRow>
+
+            <TableRow>
+                <TextView
+                    android:text="X"
+                    android:padding="3dip" />
+                <TextView
+                    android:text="Export..."
+                    android:padding="3dip" />
+                <TextView
+                    android:text="Ctrl-E"
+                    android:gravity="right"
+                    android:padding="3dip" />
+            </TableRow>
+
+            <View
+                android:layout_height="2dip"
+                android:background="#FF909090" />
+
+            <TableRow>
+                <TextView
+                    android:layout_column="1"
+                    android:text="Quit"
+                    android:padding="3dip" />
+            </TableRow>
+        </TableLayout>
+
     </LinearLayout>
+    <RelativeLayout
+        android:id="@+id/footer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/button"
+        android:gravity="center" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="Create Bill"
+            android:textColor="#ffffff"
+            android:textSize="20sp" />
+    </RelativeLayout>
 
 </RelativeLayout>
+
