--- a/res/layout/fragment_items.xml
+++ b/res/layout/fragment_items.xml
@@ -2,10 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingBottom="0dp"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="0dp"
     tools:context="com.intuit.quickfoods.MainActivity$PlaceholderFragment" >
 
     <TextView
@@ -21,17 +21,12 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:orientation="vertical"
-        android:paddingLeft="0dp" >
-
-        <AutoCompleteTextView
-            android:id="@+id/search_items"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Search Items" >
-
-            <requestFocus />
-        </AutoCompleteTextView>
+        android:paddingLeft="0dp"
+        android:padding="0dp"
+        android:paddingTop="0dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="0dp"
+        android:weightSum="1">
 
         <ScrollView
             android:id="@+id/scrollView1"
@@ -44,6 +39,12 @@
                 android:orientation="vertical" >
             </LinearLayout>
         </ScrollView>
+
+        <AutoCompleteTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/search_items"
+            android:hint="Search Items" />
 
     </LinearLayout>
 
