--- a/res/layout/fragment_take_order.xml
+++ b/res/layout/fragment_take_order.xml
@@ -94,82 +94,15 @@
             android:background="#eee"
             android:padding="5dp" />
 
-        <TableLayout
+        <ScrollView android:fillViewport="true"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:stretchColumns="1"
-            android:id="@+id/take_order_items_view_layout">
-
-            <TableRow>
-                <TextView
-                    android:layout_column="1"
-                    android:text="Open..."
-                    android:padding="3dip" />
-                <TextView
-                    android:text="Ctrl-O"
-                    android:gravity="right"
-                    android:padding="3dip" />
-            </TableRow>
-
-            <TableRow>
-                <TextView
-                    android:layout_column="1"
-                    android:text="Save..."
-                    android:padding="3dip" />
-                <TextView
-                    android:text="Ctrl-S"
-                    android:gravity="right"
-                    android:padding="3dip" />
-            </TableRow>
-
-            <TableRow>
-                <TextView
-                    android:layout_column="1"
-                    android:text="Save As..."
-                    android:padding="3dip" />
-                <TextView
-                    android:text="Ctrl-Shift-S"
-                    android:gravity="right"
-                    android:padding="3dip" />
-            </TableRow>
-
-            <View
-                android:layout_height="2dip"
-                android:background="#FF909090" />
-
-            <TableRow>
-                <TextView
-                    android:text="X"
-                    android:padding="3dip" />
-                <TextView
-                    android:text="Import..."
-                    android:padding="3dip" />
-            </TableRow>
-
-            <TableRow>
-                <TextView
-                    android:text="X"
-                    android:padding="3dip" />
-                <TextView
-                    android:text="Export..."
-                    android:padding="3dip" />
-                <TextView
-                    android:text="Ctrl-E"
-                    android:gravity="right"
-                    android:padding="3dip" />
-            </TableRow>
-
-            <View
-                android:layout_height="2dip"
-                android:background="#FF909090" />
-
-            <TableRow>
-                <TextView
-                    android:layout_column="1"
-                    android:text="Quit"
-                    android:padding="3dip" />
-            </TableRow>
-        </TableLayout>
+            android:layout_weight="1"
+            android:layout_height="0dp">
+            <LinearLayout android:id="@+id/dismissable_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+        </ScrollView>
 
     </LinearLayout>
     <RelativeLayout
