--- a/res/layout/fragment_take_order.xml
+++ b/res/layout/fragment_take_order.xml
@@ -44,81 +44,19 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="start"
                 android:text="Go"
-                android:background="@drawable/round_button" />
+                android:background="@drawable/round_blue_button" />
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="3dp"
-            >
-
-            <AutoCompleteTextView
-                android:id="@+id/take_order_add_item"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="2.53"
-                android:ems="10"
-                android:hint="Item" />
-
-            <EditText
-                android:id="@+id/editText3"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.97"
-                android:ems="10"
-                android:inputType="number"
-                android:text="1" >
-
-                <requestFocus />
-            </EditText>
-
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="+"
-                android:background="@drawable/round_button" />
-
-        </LinearLayout>
-
-        <EditText
+        <ViewStub
+            android:id="@+id/stub_import"
+            android:inflatedId="@+id/panel_import"
+            android:layout="@layout/stub_order_items_load"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText"
-            android:text="Items"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:textSize="15dp"
-            android:background="#eee"
-            android:padding="5dp" />
-
-        <ScrollView android:fillViewport="true"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="0dp">
-            <LinearLayout android:id="@+id/dismissable_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
-        </ScrollView>
-
+            android:layout_gravity="bottom" />
     </LinearLayout>
-    <RelativeLayout
-        android:id="@+id/footer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@color/button"
-        android:gravity="center" >
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Create Bill"
-            android:id="@+id/make_bill" />
-    </RelativeLayout>
 
 </RelativeLayout>
+
 
