--- a/res/layout/stub_order_items_load.xml
+++ b/res/layout/stub_order_items_load.xml
@@ -32,7 +32,7 @@
             </EditText>
 
         <Button
-                android:id="@+id/button2"
+                android:id="@+id/take_order_add_item_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="+"
@@ -41,7 +41,6 @@
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
         android:text="Items"
         android:textAlignment="center"
         android:textStyle="bold"
