dummy service added

--- a/res/layout/stub_order_items_load.xml
+++ b/res/layout/stub_order_items_load.xml
@@ -72,7 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/red_button"
-                android:text="Sumbit"
+                android:text="Submit"
                 android:id="@+id/submit_bill"
                 android:layout_weight="0.5" />
             <Button
