--- a/res/drawable/round_blue_button.xml
+++ b/res/drawable/round_blue_button.xml
@@ -5,14 +5,14 @@
         <shape>
             <solid android:color="@color/button" />
             <corners android:radius="15dp" />
-            <stroke android:width="1dp" android:color="#1284ff" />
+            <stroke android:width="1dp" android:color="#3F51B5" />
 
         </shape>
     </item>
     <item>
         <shape>
-            <gradient android:angle="270" android:endColor="#1284ff" android:startColor="#1274ff"/>
-            <stroke android:width="1dp" android:color="#4aa5d4" />
+            <gradient android:angle="270" android:endColor="#3F51B5" android:startColor="#3F51B5"/>
+            <stroke android:width="1dp" android:color="#3F51B5" />
             <corners android:radius="15dp" />
         </shape>
     </item>
