--- a/res/drawable/red_button.xml
+++ b/res/drawable/red_button.xml
@@ -9,8 +9,8 @@
     </item>
     <item>
         <shape>
-            <gradient android:angle="270" android:endColor="#f00" android:startColor="#fff05120"/>
-            <stroke android:width="1dp" android:color="#fff" />
+            <solid android:color="#F44336" />
+            <stroke android:width="1dp" android:color="#B71C1C" />
         </shape>
     </item>
 </selector>
