--- a/res/drawable/white_button.xml
+++ b/res/drawable/white_button.xml
@@ -29,7 +29,7 @@
             <item android:bottom="2dp" android:right="2dp" android:top="2dp" android:left="2dp">
                 <shape>
                     <solid android:color="@color/theme_background_light" />
-                    <stroke android:width="1dp" android:color="#9FA8DA" />
+                    <stroke android:width="1dp" android:color="@color/theme_background_dark" />
                     <corners android:radius="4dp" />
                     <padding android:bottom="15dp" android:left="10dp" android:right="10dp" android:top="15dp" />
                 </shape>
