--- a/res/layout/fragment_take_order.xml
+++ b/res/layout/fragment_take_order.xml
@@ -2,10 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="0dp"
-    android:paddingLeft="0dp"
-    android:paddingRight="0dp"
-    android:paddingTop="3dp"
     tools:context="com.intuit.quickfoods.MainActivity$PlaceholderFragment" >
 
     <TextView
@@ -27,7 +23,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:background="@color/theme_background_dark">
 
             <EditText
                 android:id="@+id/take_order_table_no"
@@ -38,13 +35,13 @@
                 android:hint="Table No."
                 android:inputType="number" />
 
-            <Button
+            <ImageButton
                 android:id="@+id/button1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:ellipsize="start"
-                android:text="Go"
-                />
+                android:elevation="2dp"
+                android:src="@android:drawable/ic_menu_send"/>
 
         </LinearLayout>
 
