--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
 
     <fragment
         android:id="@+id/navigation_drawer"
-        android:name="com.intuit.quickfoods.NavigationDrawer"
+        android:name="com.intuit.quickfoods.helpers.NavigationDrawer"
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
