--- a/res/layout/fragment_navigation_drawer.xml
+++ b/res/layout/fragment_navigation_drawer.xml
@@ -7,5 +7,5 @@
     android:choiceMode="singleChoice"
     android:divider="#1284ff"
     android:dividerHeight="0dp"
-    tools:context="com.intuit.quickfoods.NavigationDrawer" />
+    tools:context="com.intuit.quickfoods.helpers.NavigationDrawer" />
 
