--- a/res/layout/stub_order_items.xml
+++ b/res/layout/stub_order_items.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
     android:id="@+id/items_load"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -18,19 +19,34 @@
         android:text="Order"
         android:textAlignment="center"
         android:textColor="@color/background_floating_material_dark"
-        android:textSize="18dp" />
+        android:textSize="18dp"/>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:fillViewport="true">
 
         <LinearLayout
-            android:id="@+id/take_order_dismissable_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/take_order_dismissable_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.1"
+                android:orientation="vertical"/>
+
+            <LinearLayout
+                android:id="@+id/take_order_count"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.9"
+                android:orientation="vertical"/>
+        </LinearLayout>
+
     </ScrollView>
 
     <RelativeLayout
@@ -51,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:background="@drawable/red_button"
-                android:text="Submit" />
+                android:text="Submit"/>
 
             <Button
                 android:id="@+id/make_bill"
@@ -59,16 +75,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:background="@drawable/red_button"
-                android:text="Create Bill" />
+                android:text="Create Bill"/>
 
-            <EditText
-                android:id="@+id/take_order_count"
-                style="@style/Theme.Quickfoods.ItemListTextView.Light"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:ems="3"
-                android:inputType="number"
-                android:text="1"></EditText>
         </LinearLayout>
 
     </RelativeLayout>
